moved fromvw to % due to scrollbar issues and fixed searchbar bug

--- a/wms/static/css/main.css
+++ b/wms/static/css/main.css
@@ -14,7 +14,7 @@ html,
 body {
   padding: 0;
   margin: 0;
-  max-width: 100vw;
+  max-width: 100%;
   font-family: Arial, Helvetica, Sans-serif;
   box-sizing: border-box;
   overflow-x: hidden;
@@ -38,13 +38,13 @@ span {
 .heading-2,
 .heading-3 {
   line-height: 1.2;
-  padding: 1vw;
+  padding: 1%;
   display: block;
 }
 
 
 nav {
-  width: 100vw;
+  width: 100%;
   height: 10vh;
   display: flex;
   align-items: center;
@@ -67,13 +67,12 @@ nav {
 }
 
 .search {
-  padding: 0 30px 0 20px;
   flex: 1;
+  margin: 0 10px;
 }
 
 .searchbar {
   width: 100%;
-  max-width: 60vw;
   float: right;
   border: none;
   padding: 10px;
@@ -81,7 +80,7 @@ nav {
 }
 
 header {
-  width: 100vw;
+  width: 100%;
   height: 50vh;
   display: flex;
   align-items: center;
@@ -89,7 +88,7 @@ header {
 }
 
 .headerContent {
-  width: 100vw;
+  width: 100%;
   display: block;
 }
 
@@ -106,17 +105,17 @@ header {
 }
 
 .mainContent {
-  width: 100vw;
+  width: 100%;
   display: block;
 }
 
 .profile {
   border: 1px solid #000;
   display: block;
-  margin: 1vw auto;
+  margin: 1% auto;
   text-align: center;
-  padding: 1vw 3vw;
-  width: 75vw;
+  padding: 1% 3%;
+  width: 75%;
 }
 
 footer {
@@ -151,7 +150,7 @@ footer {
 }
 
 .button-login {
-  margin: 1vw auto;
+  margin: 1% auto;
   width: 80%;
 }
 
@@ -184,7 +183,7 @@ footer {
   display: block;
   padding: 24px;
   text-align: center;
-  margin: 5vw;
+  margin: 5%;
 }
 
 .box p {
@@ -211,7 +210,7 @@ footer {
 
 .group {
   display: grid;
-  grid-column-gap: 1vw;
+  grid-column-gap: 1%;
 }
 
 .group-two {
@@ -223,9 +222,9 @@ footer {
 .form {
   display: block;
   background-color: #E0E0E0;
-  width: 75vw;
-  margin: 1vw auto;
-  padding: 1vw;
+  width: 75%;
+  margin: 1% auto;
+  padding: 1%;
   text-align: center;
 }
 
@@ -236,7 +235,7 @@ footer {
   padding: 10px;
   font-size: 1rem;
   width: 80%;
-  margin: 1vw;
+  margin: 1%;
 }
 
 /* Link Styles */
